@@ -1,3 +1,8 @@
+2006-03-31  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSMenuView.m: ([-rectOfItemAtIndex:]) fixup origin of
+	rectangle to avoid overwriting dark line at left of menu.
+
 2006-03-30  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSMemoryPanel.m: Extend to allow snapshots of the memory
